fixing dateRangeRules